Hover animation for home button. Fix svg alignment in foreign objects.

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -48,3 +48,7 @@ hr {
     height: 1px;
     flex-grow: 1;
 }
+
+foreignObject > svg {
+    vertical-align: top !important;
+}
